# intermix

./: .gitignore  Cargo.toml  Gemfile  README.md  build.rs  intermix.gemspec  log4rs.toml  log4rs.yaml  modes.md
benches/: README.md.txt  drawing.rs  lib.rs  vterm_integration.rs
doc/: TODO.md.txt  TODO.txt.md  client_server_design.txt.md  mock.txt.md  modal_design.txt.md  questions.md  terminfo.txt
examples/: inaugural_address.txt  paint_bench.rs
lib/: intermix.rb
lib/intermix/: app.rb  mode.rb  pane.rb  program.rb  screen.rb  screen_cell.rb  status_pane.rb  transform.rb  tty_codes.rb  tty_output_parser.rb  version.rb  window.rb
old/screen/: mod.rs
spec/: intermix_spec.rb  spec_helper.rb
src/: lib.rs  libtsm.rs  main.rs  pane.rs  program.rs  terminfo.rs  tty_painter.rs  user_input.rs  window.rs  window_event_handler.rs
src/capnp/: schema.capnp
src/cell_buffer/: cell.rs  cell_buffer.rs  mod.rs
src/client/: draw_worker.rs  input_worker.rs  main_worker.rs  mod.rs  pen.rs  server_worker.rs  servers.rs  state.rs  stdin_read_worker.rs  tty_painter.rs  user_input.rs
src/lull/: lull.rs  mod.rs  program.rs
src/pane/: mod.rs  pane.rs
src/program/: event_handler.rs  mod.rs  msg_listener.rs  program.rs  pty_reader.rs
src/screen/: cell.rs  cells_iter.rs  mod.rs  screen.rs  tty_painter.rs
src/server/: mod.rs  server.rs
src/window/: event_handler.rs  mod.rs  msg_listener.rs  pane.rs  window.rs
tests/: cast_confusion.rs  client.rs  lib.rs  log4rs.toml  log4rs.yaml  server.rs
ttyrec/: less.tty  less_paging.tty  vim.tty  vim_cargo.tty
(+72 files in other folders)
