[package]
name = "intermix"
version = "0.1.0"
authors = ["Andy Hartford <hartforda@gmail.com>"]

[dependencies]
docopt = "0.6"
ioctl-rs = "0.1.3"
libc = "0.1.10"
libvterm-sys = { path = "../libvterm-sys" }
log = "0.3"
log4rs = "0.3.3"
pty = "0.1"
rustc-serialize = "0.3"
term = "0.2.12"
termios = "0.2"
