[package]
name = "intermix"
version = "0.1.0"
authors = ["Andy Hartford <hartforda@gmail.com>"]

[lib]
name = "libintermix"

[[bin]]
name = "monolith"
path = "src/bin/monolith.rs"

[dependencies]
docopt = "0.6"
ioctl-rs = "0.1.3"
log = "0.3"
log4rs = "0.3.3"
nix = "*"
pty = "0.1"
rustc-serialize = "0.3"
term = "0.2.12"
termios = "0.2"
uuid = "0.1"
vterm-sys = "0"

[dev-dependencies]
regex = "0.1.41"
time = "0.1"
