[package]
name = "intermix"
version = "0.1.0"
authors = ["Andy Hartford <hartforda@gmail.com>"]
build = "build.rs"

[lib]
name = "libintermix"

[[bin]]
name = "monolith"
path = "src/bin/monolith.rs"

[[bin]]
name = "lull"
path = "src/bin/lull.rs"

[dependencies]
docopt = "0.6"
ego-tree = "0.1"
ioctl-rs = "0.1"
itertools = "0.4"
libc = "0.2"
log = "0.3"
pty = "0.1"
rustc-serialize = "0.3"
term = "0.4"
termios = "0.2"
uuid = "0.1"
vterm-sys = "0"
capnp = "0.6"
capnp-rpc = "0.6"
gj = "0.1"

[dependencies.log4rs]
version = "0.4"
features = ["yaml"]

[dev-dependencies]
regex = "0.1"
time = "0.1"

[build-dependencies]
capnpc = "0.6"
